# chip8-rust-core

./: .gitignore  Cargo.toml  README.md  deploy.zsh  index.html  publish.sh  publish.zsh
.github/workflows/: crates-publish.yml  npm-publish.yml
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/browser/: README.md  index.html  start.sh  start.zsh
examples/browser-bundler/: README.md  package.json
examples/browser-bundler/src/: index.js
examples/desktop/: Cargo.toml  README.md
examples/desktop/src/: main.rs
examples/embedded/: README.md
examples/standard/: Cargo.toml
examples/standard/src/: main.rs
examples/wasm/: README.md  package-lock.json  package.json  webpack.config.js
examples/wasm/src/: index.js
examples/webpack/: README.md  package-lock.json  package.json
examples/webpack/src/: index.js
src/: clock.rs  cpu.rs  display.rs  font.rs  frame.rs  keypad.rs  keys.rs  lib.rs  main.rs  memory.rs  registers.rs  utils.rs  wasm.rs
src/cpu/: instructions.rs  registers.rs  timer.rs
src/registers/: register.rs
