[package]
name = "chip8_core"
description = "A CHIP-8 emulator core library"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
wasm-bindgen = { version = "0.2.84", optional = true }

[features]
wasm = ["wasm-bindgen"]
