[package]
name = "chip8_core"
description = "A CHIP-8 emulator core library"
homepage = "https://github.com/deanrumsby/chip8_core"
repository = "https://github.com/deanrumsby/chip8_core"
license = "MIT"
version = "0.1.4"
edition = "2021"
readme = "README.md"
keywords = ["chip8", "emulator", "core"]
categories = ["emulators", "no-std", "wasm"]
exclude = ["examples/*"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
wasm-bindgen = { version = "0.2.84", optional = true }

[features]
std = []
wasm = ["std", "dep:wasm-bindgen"]
