[package]
name = "chip8_core"
description = "A CHIP-8 emulator core library"
homepage = "https://github.com/deanrumsby/chip8_core"
repository = "https://github.com/deanrumsby/chip8_core"
license = "MIT"
version = "0.4.0"
edition = "2021"
readme = "README.md"
keywords = ["chip8", "emulator", "core"]
categories = ["emulators", "no-std", "wasm"]
exclude = ["examples/*"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
wasm-bindgen = { version = "0.2.84", optional = true }
js-sys = { version = "0.3.65", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
tsify = { version = "0.4.5", optional = true }

[features]
std = []
wasm = ["std", "dep:wasm-bindgen", "dep:js-sys", "dep:serde", "dep:serde-wasm-bindgen", "dep:tsify"]
